# IQNews_v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  log_adapter.py  log_config.py  logger_setup.py  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt
.github/workflows/: python_app.yml
services/content_validator/: config.py  main.py  metrics.py  prompts.py  ranker.py
services/content_validator/database/: models.py
services/rss_manager/: config.py  main.py  managers.py  metrics.py  rss_listener.py
services/rss_manager/database/: models.py
services/rss_manager/utils/: web_parser.py
services/tg_bot/: config.py  main.py  texts.py
services/tg_bot/handlers/: __init__.py  admin_panel.py  callback_handlers.py  command_handlers.py  information_handlers.py  text_handlers.py
services/tg_bot/keyboards/: admin_panel.py  edit_profile.py
services/tg_bot/states/: administrator.py  edit_profile.py  subscribe_rss.py
services/tg_bot/utils/: check_rss_link.py  logging.py  translator.py
services/user_manager/: config.py  main.py  managers.py  metrics.py
services/user_manager/database/: models.py
services/writer/: ai_writer.py  config.py  main.py  metrics.py  prompts.py
shared/postgresql/: core.py  models.py
tests/: test_checking_rss.py  test_translator.py
