[project]
name = "iqnews-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.4",
    "aiogram>=3.17.0",
    "aiohttp>=3.11.12",
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.13.3",
    "feedparser>=6.0.11",
    "langchain>=0.3.18",
    "langchain-together>=0.3.0",
    "prometheus-client>=0.21.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "translatepy>=2.3",
    "wheel>=0.45.1",
]
